--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
   text-align: center;
 }
 
+.addButton{
+  background-color: rgb(146, 212, 59);
+}
+
 .footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   background-color: rgb(146, 212, 59);
